fix blog style on mobile

--- a/pages/blog/style.module.css
+++ b/pages/blog/style.module.css
@@ -27,6 +27,7 @@
   .content {
     display: flex;
     flex-direction: column;
+    width: 100%;
   }
 
   .tags-list {
